Correct error in aiaa_packages.sty
Continue adding detail on eoms

--- a/aiaa_packages.sty
+++ b/aiaa_packages.sty
@@ -1,5 +1,5 @@
 % custom list of packages to load
-\ProvidesPackage{AAS_packages}
+\ProvidesPackage{aiaa_packages}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % DEFINE USEFUL PACKAGES
